k8s/base/ciam/ping-directory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-directory-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts: 
    - ping-directory.dev.ciam-portal.internal
    secretName: pingdir-tls-secret
  ingressClassName: nginx-ingress
  rules:
  - host: ping-directory.dev.ciam-portal.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ping-directory-svc
            port:
              number: 1636
